--- a/public/edit.html
+++ b/public/edit.html
@@ -54,7 +54,7 @@
 
       <label>ลิงก์เพจ (slug):</label>
       <div id="link-group">
-        <input id="link-input" type="text" placeholder="เช่น somjai99" />
+        <input id="link-input" type="text" placeholder="เช่น https://web-sale.onrender.com/xxxxx" />
         <button type="button" id="btn-generate" class="btn btn-generate">สร้างจากชื่อ</button>
         <button type="button" id="btn-copy" class="btn btn-copy">คัดลอก</button>
       </div>
