--- a/public/home.html
+++ b/public/home.html
@@ -11,23 +11,28 @@
     .navbar{display:flex;justify-content:space-between;align-items:center;background:#000;color:#fff;padding:1rem}
     .btn{border:none;border-radius:4px;padding:.45rem 1rem;font-size:.9rem;cursor:pointer;text-decoration:none}
     .btn-logout{background:#d90404;color:#fff;}
+
     .btn-create {background:#0f8d3e;color:#fff;margin:1rem 1rem 0 0;float:right;}
     .btn-edit   {background:#000;color:#fff;padding:.3rem .8rem;}
+    .btn-preview{background:#007bff;color:#fff;padding:.3rem .8rem;margin-left:.3rem;}
     .btn-delete {background:#d90404;color:#fff;padding:.3rem .8rem;margin-left:.3rem;}
     .btn:hover  {opacity:.8}
 
     table{width:100%;border-collapse:collapse;margin-top:1rem;clear:both}
     thead{background:#f5f5f5}
     th,td{padding:1rem;text-align:left;border-bottom:1px solid #eee}
-    th.actions{width:190px}
+    th.actions{width:260px}
   </style>
 </head>
 <body>
+
+  <!-- ===== Header ===== -->
   <nav class="navbar">
     <div>Sale Page</div>
     <a href="/logout" class="btn btn-logout">Logout</a>
   </nav>
 
+  <!-- ===== Main Content ===== -->
   <main style="padding:0 1rem 2rem">
     <a href="edit.html" class="btn btn-create">+ สร้าง</a>
 
@@ -42,55 +47,61 @@
     </table>
   </main>
 
-<script>
-  async function getList(){
-    try {
+  <script>
+    async function getList() {
       const res = await fetch('/api/pages');
-      return await res.json();
-    } catch (e) {
-      console.error('โหลดข้อมูลไม่สำเร็จ', e);
-      return [];
+      return res.json();
     }
-  }
 
-  async function handleDelete(id){
-    if (!confirm('ต้องการลบเพจนี้หรือไม่?')) return;
-    await fetch(`/api/pages/${id}`, { method: 'DELETE' });
+    async function handleDelete(id) {
+      if (!confirm('ต้องการลบเพจนี้หรือไม่?')) return;
+      await fetch(`/api/pages/${id}`, { method: 'DELETE' });
+      render();
+    }
+
+    async function render() {
+      const tbody = document.getElementById('names-body');
+      tbody.innerHTML = '';
+      const list = await getList();
+
+      list.forEach(item => {
+        const tr = document.createElement('tr');
+
+        const tdName = document.createElement('td');
+        tdName.textContent = item.name || '—';
+
+        const tdAct = document.createElement('td');
+
+        // edit
+        const editBtn = document.createElement('a');
+        editBtn.textContent = 'แก้ไข';
+        editBtn.className = 'btn btn-edit';
+        editBtn.href = `edit.html?id=${item.id}`;
+        tdAct.appendChild(editBtn);
+
+        // preview
+        const previewBtn = document.createElement('a');
+        previewBtn.textContent = 'พรีวิว';
+        previewBtn.className = 'btn btn-preview';
+        previewBtn.href = `/${item.slug}`;
+        previewBtn.target = '_blank';
+        tdAct.appendChild(previewBtn);
+
+        // delete
+        const delBtn = document.createElement('button');
+        delBtn.textContent = 'ลบ';
+        delBtn.className = 'btn btn-delete';
+        delBtn.addEventListener('click', () => handleDelete(item.id));
+        tdAct.appendChild(delBtn);
+
+        tr.appendChild(tdName);
+        tr.appendChild(tdAct);
+        tbody.appendChild(tr);
+      });
+    }
+
     render();
-  }
+  </script>
 
-  async function render(){
-    const tbody = document.getElementById('names-body');
-    tbody.innerHTML = '';
-    const list = await getList();
-
-    list.forEach(item => {
-      const tr = document.createElement('tr');
-
-      const tdName = document.createElement('td');
-      tdName.textContent = item.name || '—';
-
-      const tdAct = document.createElement('td');
-
-      const editBtn = document.createElement('a');
-      editBtn.textContent = 'แก้ไข';
-      editBtn.className = 'btn btn-edit';
-      editBtn.href = `edit.html?id=${item._id}`;
-      tdAct.appendChild(editBtn);
-
-      const delBtn = document.createElement('button');
-      delBtn.textContent = 'ลบ';
-      delBtn.className  = 'btn btn-delete';
-      delBtn.addEventListener('click', () => handleDelete(item._id));
-      tdAct.appendChild(delBtn);
-
-      tr.appendChild(tdName);
-      tr.appendChild(tdAct);
-      tbody.appendChild(tr);
-    });
-  }
-
-  render();
-</script>
 </body>
 </html>
