--- a/public/edit.html
+++ b/public/edit.html
@@ -137,7 +137,9 @@
     const ok = await validate();
     if (!ok) return;
     await persist();
-    window.open(urlPrev.textContent, '_blank');
+    window.open(`https://${slugI.value.trim().toLowerCase()}.${location.hostname}`, '_blank');
+
+    // window.open(urlPrev.textContent, '_blank');
   };
 
   function buildSlots() {
