--- a/public/edit.html
+++ b/public/edit.html
@@ -40,9 +40,9 @@
     <form id="edit-form">
       <label for="name-input">ชื่อเพจ:</label>
       <input id="name-input" type="text" placeholder="กรอกชื่อ" required />
-      <label>ลิงก์เพจ (slug):</label>
+      <label>ลิงก์เพจ:</label>
       <div id="link-group">
-        <input id="link-input" type="text" placeholder="เช่น somjai77" />
+        <input id="link-input" type="text" placeholder="ชื่อ SUB DOMAIN" />
         <button type="button" id="btn-generate" class="btn btn-generate">สร้างจากชื่อ</button>
         <button type="button" id="btn-copy" class="btn btn-copy">คัดลอก</button>
       </div>
