--- a/public/edit.html
+++ b/public/edit.html
@@ -72,7 +72,7 @@
 <script>
 (() => {
   const MAX_IMAGES = 10;
-  const BASE_DOMAIN = 'render.com';
+  const BASE_DOMAIN = 'skootchy.xyz';
 
   const params = new URLSearchParams(location.search);
   const id = params.get('id') || Date.now().toString();
