--- a/public/sale.html
+++ b/public/sale.html
@@ -34,7 +34,9 @@
 (async () => {
   const app = document.getElementById('app');
   // const slug = location.pathname.split('/')[1]?.toLowerCase();
-  const slug = window.location.hostname.split('.')[0].toLowerCase();
+  const BASE_DOMAIN = 'skootchy.xyz';
+  const slug = window.location.hostname.replace(`.${BASE_DOMAIN}`, '').toLowerCase();
+
 
   if (!slug) return showError('ไม่พบข้อมูล');
 
